# Single-Agent-Search

./: README.md
HW2/: GridEnvironment.cpp  GridEnvironment.h  IDAalgorithm.h  NAryTree.cpp  NAryTree.h  SlidingTileEnvironment.cpp  SlidingTileEnvironment.h  main.cpp  results.txt
HW3/: IDAalgorithm.h  PDB.cpp  PDB.h  PDBHeuristic.h  SlidingTileEnvironment.cpp  SlidingTileEnvironment.h  main.cpp
HW4/: EfficientAstar.h  EfficientList.h  GridEnvironment.cpp  GridEnvironment.h  InefficientAStar.h  InefficientList.h  SlidingTileEnvironment.cpp  SlidingTileEnvironment.h  StateWrapper.h  main.cpp
HW5/: CMakeLists.txt  DifferentialHeuristic.h  Dijkstra.h  EfficientList.h  GridEnvironment.cpp  GridEnvironment.h  InefficientAStar.h  InefficientList.h  main.cpp  out.txt
